<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/CustomLinearLayout"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/profile_icon"
            tools:ignore="ImageContrastCheck"
            android:src="@drawable/ic_mail" />

        <EditText
            android:id="@+id/loginEmailET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/philosopher"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/CustomLinearLayout"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/profile_icon"
            tools:ignore="ImageContrastCheck"
            android:src="@drawable/ic_lock" />

        <EditText
            android:id="@+id/loginPasswordET"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/philosopher"
            android:hint="@string/password"

            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/eyeIV"
            android:layout_width="45dp"
            android:layout_height="45dp"

            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/closed_eye"
            android:padding="8dp"
            android:src="@drawable/ic_eye_closed" />

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/CustomButtonStyle"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="75dp"
        android:text="@string/enter"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/regTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/philosopher"
        android:minHeight="48dp"
        android:text="@string/registration"
        android:textColor="#2E7D32"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>