<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:contentDescription="@string/logo_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_icon" />

    <ImageView
        android:id="@+id/card_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/bell_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_icon"
        app:srcCompat="@drawable/bell_icon"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/philosopher"
        android:gravity="center"
        android:text="@string/order_hotel_services_from_anywhere_online"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_icon"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/okButton"
        style="@style/CustomButtonStyle"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="40dp"


        android:fontFamily="@font/philosopher_bold"
        android:text="@string/clearly"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpUsage,TextContrastCheck,VisualLintButtonSize,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>